fixed landing hero to be centered on mobile devices instead of to the left.

--- a/packages/augur-ui/src/modules/markets-list/components/landing-hero.styles.less
+++ b/packages/augur-ui/src/modules/markets-list/components/landing-hero.styles.less
@@ -75,6 +75,7 @@
       justify-content: center;
       max-width: 340px;
       width: 100%;
+      margin: 0 auto;
 
       > span:first-of-type {
         .text-24-bold;
